[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.1", features = ["full"] }

#Axum
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"

#Sqlx
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid" ] }
sea-query = "0.30"
sea-query-binder = { version = "0.5", features = ["sqlx-postgres", "with-uuid", "with-time" ] }
modql = {version = "0.3.4", features = ["with-sea-query"]}

#Serde
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
lazy-regex = "3.1.0"
async-trait = "0.1.81"
serde_with = "3.9.0"

#Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Other
strum_macros = "0.26.4"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.9"
serial_test = "3.1.1"
